--- a/kcachegrind/configdlgbase.ui
+++ b/kcachegrind/configdlgbase.ui
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>544</width>
-            <height>652</height>
+            <width>546</width>
+            <height>616</height>
         </rect>
     </property>
     <property name="caption">
@@ -124,6 +124,12 @@
                             <property name="name">
                                 <cstring>classCombo</cstring>
                             </property>
+                            <property name="maximumSize">
+                                <size>
+                                    <width>300</width>
+                                    <height>32767</height>
+                                </size>
+                            </property>
                             <property name="editable">
                                 <bool>true</bool>
                             </property>
@@ -164,9 +170,6 @@
                                     <verstretch>0</verstretch>
                                 </sizepolicy>
                             </property>
-                            <property name="text">
-                                <string></string>
-                            </property>
                         </widget>
                         <widget class="QCheckBox" row="1" column="2">
                             <property name="name">
@@ -179,9 +182,6 @@
                         <widget class="KColorButton" row="0" column="3">
                             <property name="name">
                                 <cstring>objectColor</cstring>
-                            </property>
-                            <property name="text">
-                                <string></string>
                             </property>
                         </widget>
                         <widget class="QCheckBox" row="0" column="2">
@@ -212,13 +212,16 @@
                                     <verstretch>0</verstretch>
                                 </sizepolicy>
                             </property>
-                            <property name="text">
-                                <string></string>
-                            </property>
                         </widget>
                         <widget class="QComboBox" row="2" column="1">
                             <property name="name">
                                 <cstring>fileCombo</cstring>
+                            </property>
+                            <property name="maximumSize">
+                                <size>
+                                    <width>300</width>
+                                    <height>32767</height>
+                                </size>
                             </property>
                             <property name="editable">
                                 <bool>true</bool>
@@ -279,17 +282,11 @@
         </widget>
         <widget class="QLayoutWidget">
             <property name="name">
-                <cstring>Layout11</cstring>
+                <cstring>layout11</cstring>
             </property>
             <grid>
                 <property name="name">
                     <cstring>unnamed</cstring>
-                </property>
-                <property name="margin">
-                    <number>0</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
                 </property>
                 <spacer row="0" column="0">
                     <property name="name">
@@ -308,83 +305,69 @@
                         </size>
                     </property>
                 </spacer>
-                <widget class="QLayoutWidget" row="0" column="1">
+                <widget class="QListView" row="0" column="1">
+                    <column>
+                        <property name="text">
+                            <string>Object / Related Source Base</string>
+                        </property>
+                        <property name="clickable">
+                            <bool>true</bool>
+                        </property>
+                        <property name="resizable">
+                            <bool>true</bool>
+                        </property>
+                    </column>
                     <property name="name">
-                        <cstring>Layout5</cstring>
+                        <cstring>dirList</cstring>
                     </property>
-                    <hbox>
+                    <property name="rootIsDecorated">
+                        <bool>true</bool>
+                    </property>
+                </widget>
+                <widget class="QLayoutWidget" row="0" column="2">
+                    <property name="name">
+                        <cstring>layout10</cstring>
+                    </property>
+                    <vbox>
                         <property name="name">
                             <cstring>unnamed</cstring>
                         </property>
-                        <property name="margin">
-                            <number>0</number>
-                        </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
-                        <widget class="QListBox">
+                        <widget class="QPushButton">
                             <property name="name">
-                                <cstring>dirList</cstring>
+                                <cstring>addDirButton</cstring>
                             </property>
-                            <property name="maximumSize">
+                            <property name="text">
+                                <string>Add...</string>
+                            </property>
+                        </widget>
+                        <spacer>
+                            <property name="name">
+                                <cstring>Spacer5</cstring>
+                            </property>
+                            <property name="orientation">
+                                <enum>Vertical</enum>
+                            </property>
+                            <property name="sizeType">
+                                <enum>Expanding</enum>
+                            </property>
+                            <property name="sizeHint">
                                 <size>
-                                    <width>400</width>
-                                    <height>32767</height>
+                                    <width>16</width>
+                                    <height>49</height>
                                 </size>
                             </property>
-                        </widget>
-                        <widget class="QLayoutWidget">
+                        </spacer>
+                        <widget class="QPushButton">
                             <property name="name">
-                                <cstring>Layout4</cstring>
+                                <cstring>deleteDirButton</cstring>
                             </property>
-                            <vbox>
-                                <property name="name">
-                                    <cstring>unnamed</cstring>
-                                </property>
-                                <property name="margin">
-                                    <number>0</number>
-                                </property>
-                                <property name="spacing">
-                                    <number>6</number>
-                                </property>
-                                <widget class="QPushButton">
-                                    <property name="name">
-                                        <cstring>addDirButton</cstring>
-                                    </property>
-                                    <property name="text">
-                                        <string>Add...</string>
-                                    </property>
-                                </widget>
-                                <widget class="QPushButton">
-                                    <property name="name">
-                                        <cstring>deleteDirButton</cstring>
-                                    </property>
-                                    <property name="text">
-                                        <string>Delete</string>
-                                    </property>
-                                </widget>
-                                <spacer>
-                                    <property name="name">
-                                        <cstring>Spacer5</cstring>
-                                    </property>
-                                    <property name="orientation">
-                                        <enum>Vertical</enum>
-                                    </property>
-                                    <property name="sizeType">
-                                        <enum>Expanding</enum>
-                                    </property>
-                                    <property name="sizeHint">
-                                        <size>
-                                            <width>0</width>
-                                            <height>21</height>
-                                        </size>
-                                    </property>
-                                </spacer>
-                            </vbox>
+                            <property name="text">
+                                <string>Delete</string>
+                            </property>
                         </widget>
-                    </hbox>
+                    </vbox>
                 </widget>
-                <spacer row="2" column="1">
+                <spacer row="1" column="1">
                     <property name="name">
                         <cstring>Spacer9_2</cstring>
                     </property>
@@ -483,30 +466,9 @@
                                 <string>Symbols in tooltips and context menus</string>
                             </property>
                         </widget>
-                        <widget class="QLabel" row="1" column="0" rowspan="1" colspan="2">
-                            <property name="name">
-                                <cstring>TextLabel1_3</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Cycle estimation factors (L1/L2):</string>
-                            </property>
-                        </widget>
                         <widget class="QLineEdit" row="3" column="3">
                             <property name="name">
                                 <cstring>symbolLength</cstring>
-                            </property>
-                            <property name="sizePolicy">
-                                <sizepolicy>
-                                    <hsizetype>4</hsizetype>
-                                    <vsizetype>0</vsizetype>
-                                    <horstretch>0</horstretch>
-                                    <verstretch>0</verstretch>
-                                </sizepolicy>
-                            </property>
-                        </widget>
-                        <widget class="QLineEdit" row="1" column="3">
-                            <property name="name">
-                                <cstring>factorL2</cstring>
                             </property>
                             <property name="sizePolicy">
                                 <sizepolicy>
@@ -523,19 +485,6 @@
                             </property>
                             <property name="text">
                                 <string>Truncated when more/longer than:</string>
-                            </property>
-                        </widget>
-                        <widget class="QLineEdit" row="1" column="2">
-                            <property name="name">
-                                <cstring>factorL1</cstring>
-                            </property>
-                            <property name="sizePolicy">
-                                <sizepolicy>
-                                    <hsizetype>4</hsizetype>
-                                    <vsizetype>0</vsizetype>
-                                    <horstretch>0</horstretch>
-                                    <verstretch>0</verstretch>
-                                </sizepolicy>
                             </property>
                         </widget>
                         <widget class="QLabel" row="0" column="0" rowspan="1" colspan="2">
@@ -732,7 +681,6 @@
     <tabstop>fileCombo</tabstop>
     <tabstop>fileCheck</tabstop>
     <tabstop>fileColor</tabstop>
-    <tabstop>dirList</tabstop>
     <tabstop>maxListEdit</tabstop>
     <tabstop>PushButton1</tabstop>
     <tabstop>PushButton2</tabstop>
