CVS_SILENT spelling fixes
svn path=/trunk/kdesdk/kcachegrind/; revision=252666

--- a/kcachegrind/dumpselectionbase.ui
+++ b/kcachegrind/dumpselectionbase.ui
@@ -576,7 +576,7 @@
                                 <cstring>textLabel7</cstring>
                             </property>
                             <property name="text">
-                                <string>Miscellanous:</string>
+                                <string>Miscellaneous:</string>
                             </property>
                         </widget>
                         <widget class="QTextEdit">
