Changing "directory" to "folder" as discussed on kde-i18n-doc and kde-core-devel
svn path=/trunk/kdesdk/kcachegrind/; revision=261442

--- a/kcachegrind/configdlgbase.ui
+++ b/kcachegrind/configdlgbase.ui
@@ -272,7 +272,7 @@
                 </font>
             </property>
             <property name="text">
-                <string>Source Directories</string>
+                <string>Source Folders</string>
             </property>
         </widget>
         <widget class="Line">
