Features and fixes:         * In most views columns for 2nd Event Type added         * Context menus modified to allow quick change of 2nd Event Type         * Toolbar simplified (only most used actions)         * Terminology fixes ("cost type"->"event type",           "trace data"->"profile data", long names of Ir,Dr,...)         * Sorting costs in lists is always descending now         * New File menu item: "Add..." other profile data to current window         * Detect Cachegrind format by "events:" content, not file name           Allows for arbitrary names of profile data files.
svn path=/trunk/kdesdk/kcachegrind/; revision=300657

--- a/kcachegrind/stackselectionbase.ui
+++ b/kcachegrind/stackselectionbase.ui
@@ -39,6 +39,17 @@
             </column>
             <column>
                 <property name="text">
+                    <string>Cost2</string>
+                </property>
+                <property name="clickable">
+                    <bool>true</bool>
+                </property>
+                <property name="resizeable">
+                    <bool>true</bool>
+                </property>
+            </column>
+            <column>
+                <property name="text">
                     <string>Calls</string>
                 </property>
                 <property name="clickable">
