--- a/kcachegrind/functionselectionbase.ui
+++ b/kcachegrind/functionselectionbase.ui
@@ -13,7 +13,7 @@
         </rect>
     </property>
     <property name="caption">
-        <string>Flat Profile</string>
+        <string>Function Profile</string>
     </property>
     <grid>
         <property name="name">
