--- a/kcachegrind/stackselectionbase.ui
+++ b/kcachegrind/stackselectionbase.ui
@@ -12,7 +12,7 @@
             <height>108</height>
         </rect>
     </property>
-    <property name="caption">
+    <property name="windowTitle">
         <string>Stack Selection</string>
     </property>
     <vbox>
