--- a/kcachegrind/configdlgbase.ui
+++ b/kcachegrind/configdlgbase.ui
@@ -12,7 +12,7 @@
             <height>378</height>
         </rect>
     </property>
-    <property name="caption">
+    <property name="windowTitle">
         <string>Configuration</string>
     </property>
     <vbox>
