--- a/kcachegrind/functionselectionbase.ui
+++ b/kcachegrind/functionselectionbase.ui
@@ -12,7 +12,7 @@
             <height>485</height>
         </rect>
     </property>
-    <property name="caption">
+    <property name="windowTitle">
         <string>Function Profile</string>
     </property>
     <vbox>
