Strange under linux QListView was convert to Q3ListView and under Windows it's converted to QListView (Perhaps a missing option) => it doesn't compile So I change it directly to Q3ListView => now it compiles under windows
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=688168

--- a/kcachegrind/configdlgbase.ui
+++ b/kcachegrind/configdlgbase.ui
@@ -448,7 +448,7 @@
                                     </size>
                                 </property>
                             </spacer>
-                            <widget class="QListView" row="0" column="1">
+                            <widget class="Q3ListView" row="0" column="1">
                                 <column>
                                     <property name="text">
                                         <string>Object / Related Source Base</string>
